modify the secret

--- a/mysql/templates/secret.yaml
+++ b/mysql/templates/secret.yaml
@@ -8,4 +8,4 @@ type: Opaque
 data:
   mysql-root-password: cGFzc3dvcmQK
   mysql-user: dXNlcgo=
-  mysql-password: dXNlcgo=
+  mysql-password: cGFzc3dvcmQK
